# StockSage-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  docker-compose.yml  requirements.txt  run_exe.py
HelloAgents Optimized/: .gitignore  pyproject.toml
HelloAgents Optimized/hello_agents/: .gitignore  __init__.py  version.py
HelloAgents Optimized/hello_agents/agents/: __init__.py  react_agent.py  reflection_agent.py
HelloAgents Optimized/hello_agents/core/: __init__.py  agent.py  config.py  conversation.py  conversation_manager.py  exceptions.py  llm.py  message.py  stream.py
HelloAgents Optimized/hello_agents/tools/: __init__.py  base.py  registry.py
agents/: __init__.py  advisor_agent.py  agent_system.py  coordinator_agent.py  data_analysis_agent.py  general_advisor_agent.py  sentiment_agent.py  text_truncation.py
agents/tests/: __init__.py
agents/tools/: __init__.py  mx_data_tool.py  mx_search_tool.py  rag_tool.py
backend/: Dockerfile  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  agent_api.py  analysis.py  buffett.py  cache_api.py  chat.py  data_analysis.py  financial.py  history.py  market.py  news.py  preferences.py  screener.py  sentiment.py  simulation.py  system_browser.py  watchlist.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/models/: __init__.py  database.py  history.py  history_models.py  memory_models.py  preference.py  report.py
backend/app/services/: __init__.py  analysis_service.py  buffett_service.py  chat_service.py  dashboard_warmup.py  history_service.py  market_service.py  memory_service.py  mx_timed_cache.py  news_service.py  preference_service.py  rag_service.py  screener_service.py  simulation_service.py  stock_file_cache.py  watchlist_service.py
backend/app/utils/: __init__.py  mock_trading_normalize.py  mx_fixture.py  mx_http.py  mx_quota.py  response.py
backend/scripts/: capture_mx_fixture.py  smoke_financial_api.py
backend/tests/: __init__.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/router/: index.js  (+1 more)
paraphrase-multilingual-MiniLM-L12-v2/: .gitattributes  tokenizer_config.json  unigram.json
paraphrase-multilingual-MiniLM-L12-v2/openvino/: openvino_model.xml  openvino_model_qint8_quantized.xml
scripts/: build_exe.py
skills/巴菲特投资思维/: .gitignore
(+36 files in other folders)
